Alteração no texto e inclusão do campo minado

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <div id="projetos">
         <h1>Projetos</h1>
         <div class="projeto" style="align-items: center;">
-            <a href="https://github.com/Rafael-dev2/CampoMinado">
+            <a href="projetos/index.html">
             <div style="margin-right: 1em;margin-left: 1em;">
                 <h3>Campo Minado</h3>
             </div>
             <div style="display: flex;">
                 <img src="images/campoMinado.png" style="width: 8em;height: 4.5em;margin-right: 1em;margin-top: 1em;margin-left: 1em">
-                <p> Esse projeto WEB se baseia em uma implementação do jogo campo minado
+                <p> Esse projeto de programação WEB se baseia em uma implementação do jogo campo minado
                 com diversos recursos como a criação de usuário, a possibilidade de
                 escolher múltiplas dificuldades como também a inclusão de tempo limite
                 e por fim um quadro de recordes</p>
