--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="styles.css">
-
+<link rel="icon" href="favicon.svg">
 
 <head>
     <meta charset="UTF-8">
